style.css footer section layout sorted, fixed locations section spacing issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,7 @@ html {
     color: seashell;
     background-color: black;
     opacity: 0.9;
+    font-size: 22px;
 }
 
 a {
@@ -32,7 +33,7 @@ header {
 
 .logo {
     height: 50px;
-    margin-left: 10px;
+    padding: 10px;
 }
 
 nav li {
@@ -51,6 +52,16 @@ nav li {
     margin: 0 auto;
 }
 
+#banner h2 {
+    padding-top: 14.4375rem;
+}
+
+#banner h4 {
+    background: black;
+    padding: 20px;
+}
+
+
 /* Tea of the Month */
 
 .container {
@@ -59,6 +70,11 @@ nav li {
     justify-content: center;
     margin: 0 auto;
 }
+
+.container h2 {
+    padding-top: 30px;
+}
+
 .teaofthemonth {
     width: 1000px;
     display: flex;
@@ -70,8 +86,60 @@ nav li {
 .teaofthemonth img {
     width: 300px;
     height: 200px;
-    margin-left: 0;
-    margin-right: 0;
+}
+
+figure {
+    margin: 0;
+    padding: 10px;
 }
 
 /* Locations */
+
+#locations {
+    background: url(./Photos/img-locations-background.webp);
+    height: 500px;
+    margin: 0 auto;
+    text-align: center;
+    width: 1200px;
+}
+
+#locations h2 {
+    padding-top: 80px;
+    padding-bottom: 0;
+}
+
+.addresses {
+    display: flex;
+    justify-content: center;
+}
+
+.addresses .addresses-1 {
+    width: 300px;
+    background: black;
+    margin: 15px 20px;
+    opacity: 1;
+}
+
+.addresses .addresses-2 {
+    width: 300px;
+    background: black;
+    margin: 15px 20px;
+}
+
+.addresses .addresses-3 {
+    width: 300px;
+    background: black;
+    margin: 15px 20px;
+}
+
+/* Footer */
+
+footer .contact {
+    height: 200px;
+    text-align: center;
+}
+
+footer p {
+    text-align: left;
+    padding-left: 20px;
+}
